--- a/atef/ui/comp_equals.ui
+++ b/atef/ui/comp_equals.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>238</width>
-    <height>97</height>
+    <height>113</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,15 +31,30 @@
    </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>9</number>
+     </property>
      <item>
-      <widget class="QLabel" name="equals_label">
+      <widget class="QLabel" name="x_label">
        <property name="font">
         <font>
          <pointsize>16</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>x = </string>
+        <string>x</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="comp_symbol_label">
+       <property name="font">
+        <font>
+         <pointsize>16</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>=</string>
        </property>
       </widget>
      </item>
