--- a/atef/ui/comp_float_gtlt.ui
+++ b/atef/ui/comp_float_gtlt.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="spacing">
+    <number>9</number>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -34,7 +37,7 @@
       </font>
      </property>
      <property name="text">
-      <string>x </string>
+      <string>x</string>
      </property>
     </widget>
    </item>
@@ -47,18 +50,6 @@
      </property>
      <property name="text">
       <string>?</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="empty_label">
-     <property name="font">
-      <font>
-       <pointsize>16</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string/>
      </property>
     </widget>
    </item>
