--- a/atef/ui/comp_range.ui
+++ b/atef/ui/comp_range.ui
@@ -287,6 +287,9 @@
        <property name="toolTip">
         <string/>
        </property>
+       <property name="penWidth" stdset="0">
+        <double>3.000000000000000</double>
+       </property>
        <property name="rotation" stdset="0">
         <double>90.000000000000000</double>
        </property>
@@ -338,6 +341,9 @@
        <property name="toolTip">
         <string/>
        </property>
+       <property name="penWidth" stdset="0">
+        <double>3.000000000000000</double>
+       </property>
        <property name="rotation" stdset="0">
         <double>90.000000000000000</double>
        </property>
@@ -370,6 +376,9 @@
        <property name="toolTip">
         <string/>
        </property>
+       <property name="penWidth" stdset="0">
+        <double>3.000000000000000</double>
+       </property>
        <property name="rotation" stdset="0">
         <double>90.000000000000000</double>
        </property>
@@ -391,6 +400,9 @@
        </property>
        <property name="toolTip">
         <string/>
+       </property>
+       <property name="penWidth" stdset="0">
+        <double>3.000000000000000</double>
        </property>
        <property name="rotation" stdset="0">
         <double>90.000000000000000</double>
