--- a/atef/ui/config_group.ui
+++ b/atef/ui/config_group.ui
@@ -46,6 +46,13 @@
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QToolButton" name="parent_button">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
