--- a/atef/ui/comp_view.ui
+++ b/atef/ui/comp_view.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>358</height>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,6 +44,13 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QToolButton" name="parent_button">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
