--- a/atef/ui/config_group.ui
+++ b/atef/ui/config_group.ui
@@ -121,8 +121,17 @@
      <item>
       <widget class="QWidget" name="devices_container" native="true">
        <layout class="QVBoxLayout" name="devices_container_layout">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
         <property name="bottomMargin">
-         <number>1</number>
+         <number>0</number>
         </property>
         <item>
          <widget class="QLabel" name="label_4">
@@ -167,8 +176,17 @@
      <item>
       <widget class="QWidget" name="checklists_container" native="true">
        <layout class="QVBoxLayout" name="checklists_container_layout">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
         <property name="bottomMargin">
-         <number>1</number>
+         <number>0</number>
         </property>
         <item>
          <widget class="QLabel" name="label_5">
