--- a/atef/ui/config_overview_row.ui
+++ b/atef/ui/config_overview_row.ui
@@ -142,6 +142,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QToolButton" name="child_button">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
