--- a/atef/ui/str_list_elem.ui
+++ b/atef/ui/str_list_elem.ui
@@ -61,6 +61,13 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QToolButton" name="child_button">
+     <property name="text">
+      <string>...</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
