--- a/atef/ui/config_overview_row.ui
+++ b/atef/ui/config_overview_row.ui
@@ -68,6 +68,13 @@
          <number>0</number>
         </property>
         <item>
+         <widget class="QToolButton" name="child_button">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QLineEdit" name="name_edit">
           <property name="text">
            <string/>
@@ -80,13 +87,6 @@
           </property>
           <property name="clearButtonEnabled">
            <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="delete_button">
-          <property name="text">
-           <string>DELETE CONFIG</string>
           </property>
          </widget>
         </item>
@@ -143,9 +143,9 @@
          </widget>
         </item>
         <item>
-         <widget class="QToolButton" name="child_button">
+         <widget class="QToolButton" name="delete_button">
           <property name="text">
-           <string>...</string>
+           <string>X</string>
           </property>
          </widget>
         </item>
