--- a/atef/ui/config_tree.ui
+++ b/atef/ui/config_tree.ui
@@ -6,28 +6,36 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>649</width>
-    <height>818</height>
+    <width>874</width>
+    <height>481</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_3">
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QTreeWidget" name="tree_widget">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="editTriggers">
-      <set>QAbstractItemView::NoEditTriggers</set>
+     <property name="opaqueResize">
+      <bool>false</bool>
      </property>
-     <property name="columnCount">
-      <number>0</number>
-     </property>
+     <widget class="QTreeWidget" name="tree_widget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="columnCount">
+       <number>0</number>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
