--- a/atef/ui/happi_device_component.ui
+++ b/atef/ui/happi_device_component.ui
@@ -6,86 +6,96 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>729</width>
-    <height>494</height>
+    <width>928</width>
+    <height>524</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Happi Item and Ophyd Component Selection</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_3">
+   <property name="leftMargin">
+    <number>5</number>
+   </property>
+   <property name="topMargin">
+    <number>5</number>
+   </property>
+   <property name="rightMargin">
+    <number>5</number>
+   </property>
+   <property name="bottomMargin">
+    <number>5</number>
+   </property>
    <item>
-    <widget class="QSplitter" name="splitter_main">
+    <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QGroupBox" name="device_selection_group">
-      <property name="title">
-       <string>Device selection</string>
+     <widget class="HappiSearchWidget" name="item_search_widget" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="HappiSearchWidget" name="item_search_widget" native="true"/>
-       </item>
-      </layout>
+      <property name="maximumSize">
+       <size>
+        <width>300</width>
+        <height>16777215</height>
+       </size>
+      </property>
      </widget>
-     <widget class="QSplitter" name="splitter_md_component">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
+     <widget class="QTabWidget" name="device_tab_widget">
+      <property name="tabPosition">
+       <enum>QTabWidget::North</enum>
       </property>
-      <widget class="QGroupBox" name="groupBox">
-       <property name="title">
-        <string>Happi Item Metadata</string>
-       </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <property name="documentMode">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="components_tab">
+       <attribute name="title">
+        <string>Device Components</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="leftMargin">
-         <number>0</number>
+         <number>10</number>
         </property>
         <property name="topMargin">
-         <number>0</number>
+         <number>10</number>
         </property>
         <property name="rightMargin">
-         <number>0</number>
+         <number>10</number>
         </property>
         <property name="bottomMargin">
-         <number>0</number>
-        </property>
-        <item>
-         <widget class="HappiItemMetadataView" name="metadata_widget" native="true"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QGroupBox" name="component_info_group">
-       <property name="title">
-        <string>Component information</string>
-       </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>0</number>
+         <number>10</number>
         </property>
         <item>
          <widget class="OphydDeviceTableWidget" name="device_widget"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="metadata_tab">
+       <attribute name="title">
+        <string>Happi Metadata</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="leftMargin">
+         <number>10</number>
+        </property>
+        <property name="topMargin">
+         <number>10</number>
+        </property>
+        <property name="rightMargin">
+         <number>10</number>
+        </property>
+        <property name="bottomMargin">
+         <number>10</number>
+        </property>
+        <item>
+         <widget class="HappiItemMetadataView" name="metadata_widget" native="true"/>
         </item>
        </layout>
       </widget>
